| Summary: | ASTERISK-29967: pbx_builtins: Add missing documentation | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-03-14 11:52:47 | Date Closed: | 2022-03-23 15:17:44 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | PBX/General |
| Versions: | 18.10.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Some of the PBX builtin applications have options that are currently undocumented, but they are in the code.
This adds the missing options to the xml documentation. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-03-14 11:52:47.894-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-03-23 15:17:45.285-0500 Change 18227 merged by Friendly Automation: pbx_builtins: Add missing options documentation [https://gerrit.asterisk.org/c/asterisk/+/18227|https://gerrit.asterisk.org/c/asterisk/+/18227] By: Friendly Automation (friendly-automation) 2022-03-23 15:56:38.617-0500 Change 18228 merged by Friendly Automation: pbx_builtins: Add missing options documentation [https://gerrit.asterisk.org/c/asterisk/+/18228|https://gerrit.asterisk.org/c/asterisk/+/18228] By: Friendly Automation (friendly-automation) 2022-03-23 16:05:31.612-0500 Change 18229 merged by Friendly Automation: pbx_builtins: Add missing options documentation [https://gerrit.asterisk.org/c/asterisk/+/18229|https://gerrit.asterisk.org/c/asterisk/+/18229] By: Friendly Automation (friendly-automation) 2022-03-23 16:08:25.028-0500 Change 18198 merged by Friendly Automation: pbx_builtins: Add missing options documentation [https://gerrit.asterisk.org/c/asterisk/+/18198|https://gerrit.asterisk.org/c/asterisk/+/18198] | ||